syntax="proto3";
package v1;

message Race {
    string key = 1;
    Start advertisedstart = 2;
    string categoryid = 3;
    string meetingid = 4;
    string meetingname = 5;
    Form raceform = 6;
    string raceid = 7;
    string racename = 8;
    int64 racenumber = 9;
    string venuecountry = 10;
    string venueid = 11;
    string venuename = 12;
    string venuestate = 13;
}

message Start {
    int64 seconds = 1;
}

message Form {
    string additionaldata = 1;
    int64 distance = 2;
    DistanceType distancetype = 3;
    string distancetypeid = 4;
    int64 generated = 5;
    string racecomment = 6;
    string racecommentalt = 7;
    string silkbaseurl = 8;
    TrackCondition conditions = 9;
    string trackconditionid = 10;
    Weather weather = 11;
    string weatherid = 12;
}

message DistanceType {
    string id = 1;
    string name = 2;
    string shortname = 3;
}

message TrackCondition {
    string id = 1;
    string name = 2;
    string shortname = 3;
}

message Weather {
    string iconurl = 1;
    string id = 2;
    string name = 3;
    string shortname = 4;
}

message Races{
    repeated Race races = 1;
}

message Acknowledgement{
	string api = 1;
	string errormessage = 3;
}

message RacesRequest {
    string method = 1;
    int64 count = 2;
    repeated string categories = 3;
}

// Service to manage racing service tasks
service RacingService {
    rpc CreateRaces(Races) returns (Acknowledgement){}
    rpc GetRaces(RacesRequest) returns (Races) {}
}
